add authentication passport-local-streatagy login using a session cookie set up MongoStore for persistent cookie storage in the browser add authentications to the routes where ever is required

--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,10 +1,10 @@
-
 <section class="sign-in-form">
     <img src="https://mir-s3-cdn-cf.behance.net/projects/404/1090a1108377453.Y3JvcCwxMDgwLDg0NCwwLDEw.jpg" alt="placement_cell_logo" class="placement_cell_logo">
-<h1>Sign In</h1>
+    <h1>Sign In</h1>
     <form class="sign-in-form" action="/employee/create-session" method="post">
-    <input type="email" placeholder="email" name="Your email" required>
-    <input type="password" placeholder="Type in password.." name="password" required>
-    <button type="submit">Sign In</button>
-</form>
+        <!-- Update the name attributes to "email" and "password" -->
+        <input type="email" placeholder="email" name="email" required>
+        <input type="password" placeholder="Type in password.." name="password" required>
+        <button type="submit">Log In</button>
+    </form>
 </section>
